<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.example.admin.creditcardapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:layout_weight="1.1"
            />
        <EditText
            android:id="@+id/card_bal"
            android:layout_width="0dp"
            android:layout_height="@dimen/height"
            android:layout_weight=".9"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Interest"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:layout_weight="1.1"
            />
        <EditText
            android:id="@+id/yr_rate"
            android:layout_width="0dp"
            android:layout_height="@dimen/height"
            android:layout_weight="0.9"
            android:layout_gravity="center_vertical"
            android:background="@color/white"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/min_pay"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.1"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/min_pay"
            android:layout_width="0dp"
            android:layout_height="@dimen/height"
            android:layout_weight=".9"
            android:layout_gravity="center_vertical"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fin_bal"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.1"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/fin_bal"
            android:layout_width="0dp"
            android:layout_height="@dimen/height"
            android:layout_weight="0.9"
            android:layout_gravity="center_vertical"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rem_months"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.1"
            android:textColor="@color/white"
            />
        <EditText
            android:id="@+id/rem_mon"
            android:layout_width="0dp"
            android:layout_height="@dimen/height"
            android:layout_weight="0.9"
            android:layout_gravity="center_vertical"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/paid_interest"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.1"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/paid_int"
            android:layout_width="0dp"
            android:layout_height="@dimen/height"
            android:layout_weight="0.9"
            android:layout_gravity="center_vertical"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/comp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_compute"/>
        <Button
            android:id="@+id/clr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clear"/>

    </LinearLayout>

</LinearLayout>